--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
           python-version: '3.x'
 
       - name: Dependency instalation
-        run: pip install -r requirements
+        run: pip install -r requirements.txt
 
       - name: Run the tests
         run: pytest
