--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.py", "use": "@vercel/python" }],
+  "builds": [
+    {
+      "src": "./index.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
-    { "src": "/", "dest": "index.py" },
-    { "src": "/docs", "dest": "index.py" },
-    { "src": "/openapi.json", "dest": "index.py" }
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
