--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./index.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+  "builds": [{ "src": "index.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "index.py" }]
 }
